--- a/src/index.css
+++ b/src/index.css
@@ -33,22 +33,8 @@
 @font-face {
   font-family: "Tahoma";
   src: url('../src/assets/fonts/Tahoma-Regular-font.ttf') format(ttf);
-  font-weight:Medium;
+  font-weight:500;
   font-style: normal;
-}
-:root {
-  line-height: 1.5;
-  font-weight: 400;
-
-  color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
 }
 *{
   padding: 0;
@@ -56,10 +42,21 @@
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-  color: #000;
 }
 button{
   cursor: pointer;
-  
+  outline: none;
+  border: none;  
 }
-
+.flex{
+  display: flex;
+  align-items: center;
+}
+.grid{
+  display: grid;
+}
+.container{
+  width: 1500px;
+  margin: auto;
+  overflow: hidden;
+}
