--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,8 @@
 .header{
-    padding: 0 120px;
-    background-color: #F0EADC !important;
+    padding: 0 120px 100px;
+    background-color: #f3f1ec;
+    position: relative;
+    margin-bottom: 90px;
 }
 .navbar{
     justify-content: space-between;
@@ -65,7 +67,8 @@
     text-transform: capitalize;
     filter: drop-shadow(10px 6px 0px rgb(32, 32, 32));
     background-color: #F0E9E0;
-    border: 1px solid #353131;
+    border: 2px solid #353131;
+    outline: none;
 }
 .search__bar{
     position: relative;
@@ -84,3 +87,18 @@
     filter: drop-shadow(-5px -1px 0px #D0B6A7);
     cursor: pointer;
 }
+.photo__content{
+    display: flex;
+    align-items: center;
+}
+.photo__content img:nth-child(1){
+    transform: translateY(160px);
+}
+.photo__content img:nth-child(3){
+    transform: translateY(-160px);
+}
+
+
+
+
+
